finished controller functionality, added basic view com

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/User/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/User/Index.cshtml
@@ -1,1 +1,10 @@
-﻿This is the User Index view amigo
+﻿<!DOCTYPE html>   
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+    <a asp-action = "Create"> New User </a> 
+    <a asp-action = "Details"> Login </a>
+</body>
+</html> 
