--- a/BlindVacationFullstack/BlindVacationFullstack/Views/User/Delete.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/User/Delete.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model BlindVacationFullstack.Models.User
+
+<html>
+<head>
+    <title></title>
+</head>
+
+<body>
+    <h2> @Model.Name</h2>
+    <form asp-action="Delete">
+        <fieldset>
+            <input type="hidden" asp-for="@Model.ID" />
+        </fieldset>
+        <button type="submit" value="Delete">Delete</button>
+    </form>
+</body>
+</html>
