--- a/BlindVacationFullstack/BlindVacationFullstack/Views/User/Details.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/User/Details.cshtml
@@ -8,5 +8,8 @@
 <body>
     <header></header>
     <h1> @Model.Name </h1>
+    <h2>Your favorite color: @Model.FaveColor</h2>
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit User Settings</a>
+    <a asp-action="Delete" asp-route-id="@Model.ID">Cancel Account</a>
     <footer></footer>
 </body>
