Added bootstrap and layout to all pages via ViewStart. Created Nav bar

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
@@ -1,1 +1,4 @@
-﻿<a href="~/user">Login</a>
+﻿
+<img class="img-fluid" id="home_image" src="~/assets/imgs/homepage.jpeg" />
+
+<a href="~/user">Login</a>
