--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
 ﻿
 <img class="img-fluid" id="home_image" src="~/assets/imgs/homepage.jpeg" />
 
-<a href="~/user">Login</a>
+<a class="IndexButton" href="~/user">Login</a>
