--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
 <body>
     <header>
         @*Code from https://getbootstrap.com/docs/4.3/components/navs/*@
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: darkgreen;">
+            <a class="navbar-brand" href="#">Brainless Vacations</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
