created ability to read deserialized JSON object and print to details screen.

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="~/Popular">Popular Trips</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Survey">Take the Survey</a>
+                        <a class="nav-link" href="~/Trip">Take the Survey</a>
                     </li>
 
                 </ul>
