Finished Day 3 push to development

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Details.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Details.cshtml
@@ -10,7 +10,7 @@
 
 <h4>@Model.Activity.Name</h4>
 
-<form>
+<form asp-action="Details">
     <input type="hidden" asp-for="@Model.AnswerCode" />
     <input type="hidden" asp-for="@Model.City.Name" />
     <input type="hidden" asp-for="@Model.User.ID" value="1" />
@@ -18,6 +18,6 @@
     <button type="submit">Save Your Vacation!</button>
 </form>
 
-<form>
+<form asp-action="Index">
     <button type="submit">Retake the Survey</button>
 </form>
