--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="~/MyVacations">My Vacations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Popular">Popular Trips</a>
+                        <a class="nav-link" href="~/Trip/Popular">Popular Trips</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="~/Trip">Take the Survey</a>
