--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Details.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Details.cshtml
@@ -11,10 +11,17 @@
 <h4>@Model.Activity.Name</h4>
 
 <form asp-action="Details">
-    <input type="hidden" asp-for="@Model.AnswerCode" />
-    <input type="hidden" asp-for="@Model.City.Name" />
-    <input type="hidden" asp-for="@Model.User.ID" value="1" />
-    <input asp-for="@Model.SavedTrip.VacationName" />
+    <input type="hidden" asp-for="AnswerCode" value="@Model.AnswerCode" />
+    <div>
+    <input type="hidden" asp-for="CityName" value="@Model.City.Name" />
+    </div>
+    <div>
+    <input type="hidden" asp-for="UserID" value="@Model.User.ID" />
+    </div>
+    <fieldset>
+        <label asp-for="VacationName"> Add a name to your vacation:</label>
+    <input asp-for="VacationName" value="" />
+    </fieldset>
     <button type="submit">Save Your Vacation!</button>
 </form>
 
