Added ability to view details of saved and popular trips. Added ability to delete saved trip.

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Index.cshtml
@@ -24,8 +24,8 @@ Hello it me survey
     <fieldset>
         Are you going to be traveling with children?
         <label asp-for="@Model.HasChildren" />
-        <input type="radio" asp-for="@Model.HasChildren" value="True" /> With Family
-        <input type="radio" asp-for="@Model.HasChildren" value="False" /> Without Family
+        <input type="radio" asp-for="@Model.HasChildren" value="True" /> Yes
+        <input type="radio" asp-for="@Model.HasChildren" value="False" /> No
     </fieldset>
     <fieldset>
         Do you want to do an outdoor or indoor focused vacation?
