--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="~/Home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/MyVacations">My Vacations</a>
+                        <a class="nav-link" href="~/Trip/MyVacations">My Vacations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="~/Trip/Popular">Popular Trips</a>
