--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/MyVacations.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/MyVacations.cshtml
@@ -4,4 +4,18 @@
 {
     <h6>@item.CityName</h6>
     <h6>@item.VacationName</h6>
+
+    <form asp-action="MyVacations">
+        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).InUSA" />
+        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).LikesHot" />
+        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).Price" />
+        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).HasChildren" />
+        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).LikesOutdoor" />
+        <button type="submit">View Details</button>
+    </form>
+    <form asp-action="DeleteSavedTrip">
+        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).AnswerCode" />
+        <input type="hidden" asp-for="@Model.First(x => x.UserID == item.UserID).UserID" />
+        <button type="submit">Delete Trip</button>
+    </form>
 }
