--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
@@ -1,4 +1,62 @@
-﻿
-<img class="img-fluid" id="home_image" src="~/assets/imgs/homepage.jpeg" />
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title></title>
+    <link rel="stylesheet" href="~/css/reset.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
+</head>
+<body>
 
-<a class="IndexButton" href="~/user">Login</a>
+    <div id="box">
+        @*images taken from google searches*@
+
+        @*<img id="home_image" src="~/assets/imgs/homepage.jpeg" />*@
+        <img id="home_image3" src="~/assets/imgs/nyc.jpg" />
+        <img id="home_image3" src="~/assets/imgs/moscow1.jpg" />
+        <img id="home_image3" src="~/assets/imgs/paris.jpg" /> <br />
+        <img id="home_image1" src="~/assets/imgs/rio.jpg" /><br />
+        <img id="home_image" src="~/assets/imgs/new delhi.jpg" />
+        <img id="home_image6" src="~/assets/imgs/rome.jpg" />
+        <img id="home_image" src="~/assets/imgs/seoul.jpg" /><br />
+        <img id="home_image1" src="~/assets/imgs/phuket.jpg" /><br />
+
+
+    </div>
+    <a class="IndexButton" href="~/user">Login</a>
+
+    @*description from: https://careertrend.com/about-6597438-travel-planner-job-description.html*@
+
+    <div id="test">
+        <img id="home_image5" src="~/assets/imgs/beach-vacation.jpg" />
+        <p id="p12">Who are we?</p><br />
+        <p id="p11">
+            Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
+            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+
+        </p>
+
+    </div>
+
+    <div id="test2">
+        <img id="home_image7" src="~/assets/imgs/problem.jpg" />
+        <p id="p12">What problems do we set out to solve?</p><br />
+        <p id="p11">
+            Make your vacation an enjoyable one. Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
+            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+
+        </p>
+
+    </div>
+    <div id="test3">
+        <img id="home_image5" src="~/assets/imgs/team.jpg" />
+        <p id="p12">About the team.</p><br />
+        <p id="p11">
+            Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
+            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+
+        </p>
+
+    </div>
+
+</body>
+</html>
+
