--- a/BlindVacationFullstack/BlindVacationFullstack/wwwroot/css/style.css
+++ b/BlindVacationFullstack/BlindVacationFullstack/wwwroot/css/style.css
@@ -3,13 +3,70 @@
     color: black;
 }
 
+#box {
+    padding-left: 20%;
+    width: 100%;
+}
 #home_image {
     box-sizing: border-box;
-    display: block;
-    width: 60%;
+    display: inline;
+    width: 25%;
+    margin: 5px auto;
+    border-radius: 25px;
+}
+#home_image1 {
+    box-sizing: border-box;
+    display: inline;
+    width: 75.5%;
+    margin: 5px auto;
+    border-radius: 25px;
+}
+#home_image2 {
+    box-sizing: border-box;
+    display: inline;
+    width: 10%;
     margin: 10px auto;
     border-radius: 25px;
 }
+#home_image3 {
+    box-sizing: border-box;
+    display: inline;
+    width: 25%;
+    margin: 10px auto;
+    border-radius: 25px;
+}
+#home_image4 {
+    box-sizing: border-box;
+    display: inline;
+    width: 20%;
+    margin: 30px auto;
+    border-radius: 25px;
+}
+
+#home_image5 {
+    box-sizing: border-box;
+    display: inline;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 25px;
+}
+#home_image6 {
+    box-sizing: border-box;
+    display: inline;
+    width: 25.5%;
+    height: 20%;
+    margin: 5px auto;
+    border-radius: 25px;
+}
+#home_image7 {
+    box-sizing: border-box;
+    display: inline;
+    width: 80%;
+    height: 20%;
+    margin-left: 8%;
+    border-radius: 25px;
+}
+
 .IndexButton {
     padding: 10px 20px;
     background-color: darkgreen;
@@ -35,3 +92,35 @@ h1 {
     background-color: darkgreen;
 }
 
+
+#p11 {
+    text-align: center;
+    width: 100%;
+    font-size: 1vw;
+}
+#p12 {
+    text-align: center;
+    width: 100%;
+    font-size: 1vw;
+    font-weight:bold;
+}
+
+#test {
+    width: 30%;
+    float: left;
+    margin-top: 5%;
+    margin-bottom: 1%;
+}
+#test2 {
+    width: 30%;
+    margin-left: 5%;
+    float: left;
+    margin-top: 5%;
+    margin-bottom: 1%;
+}
+#test3 {
+    width: 30%;
+    float: right;
+    margin-top: 5%;
+    margin-bottom: 1%;
+}
