--- a/BlindVacationFullstack/BlindVacationFullstack/Views/User/Details.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/User/Details.cshtml
@@ -8,7 +8,7 @@
 <body>
     <header></header>
     <h1> @Model.Name </h1>
-    <h2>Your favorite color: @Model.FaveColor</h2>
+    <h2>Your favorite TripItem: @Model.FaveTripItem</h2>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit User Settings</a>
     <a asp-action="Delete" asp-route-id="@Model.ID">Cancel Account</a>
     <footer></footer>
