--- a/BlindVacationFullstack/BlindVacationFullstack/wwwroot/css/style.css
+++ b/BlindVacationFullstack/BlindVacationFullstack/wwwroot/css/style.css
@@ -12,7 +12,7 @@
 }
 .IndexButton {
     padding: 10px 20px;
-    background-color: darkgreen;
+    background-Color: darkgreen;
     border-radius: 5px;
     color: white;
     display: block;
@@ -23,7 +23,6 @@
     .IndexButton:hover {
         background-color: green;
         color: white;
-        
     }
 
 h1 {
