--- a/BlindVacationFullstack/BlindVacationFullstack/Views/User/Create.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/User/Create.cshtml
@@ -13,8 +13,8 @@
             <input asp-for="@Model.Name" />
         </fieldset>
         <fieldset>
-            <label asp-for="@Model.FaveColor">Select your favorite color</label>
-            <select asp-for="@Model.FaveColor" asp-items="@Html.GetEnumSelectList(typeof(BlindVacationFullstack.Models.User.Color))"></select>
+            <label asp-for="@Model.FaveTripItem">Select your favorite TripItem</label>
+            <select asp-for="@Model.FaveTripItem" asp-items="@Html.GetEnumSelectList(typeof(BlindVacationFullstack.Models.User.TripItem))"></select>
         </fieldset>
         <button type="submit" value="Create">Submit User</button>
     </form>
