home page done, just some small edits left

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
@@ -21,7 +21,6 @@
 
 
     </div>
-    <a class="IndexButton" href="~/user">Login</a>
 
     @*description from: https://careertrend.com/about-6597438-travel-planner-job-description.html*@
 
@@ -30,7 +29,7 @@
         <p id="p12">Who are we?</p><br />
         <p id="p11">
             Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
-            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+           <br /><br /> We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
 
         </p>
 
@@ -40,8 +39,7 @@
         <img id="home_image7" src="~/assets/imgs/problem.jpg" />
         <p id="p12">What problems do we set out to solve?</p><br />
         <p id="p11">
-            Make your vacation an enjoyable one. Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
-            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+            Make your vacation an enjoyable one. ADD MORE INFO.
 
         </p>
 
@@ -50,8 +48,8 @@
         <img id="home_image5" src="~/assets/imgs/team.jpg" />
         <p id="p12">About the team.</p><br />
         <p id="p11">
-            Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
-            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+            CHANGE INFO..............Brainless Vacations seeks to help our uerey set by taking our survey.
+            ation makes itt.
 
         </p>
 
