--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
@@ -16,14 +16,17 @@
 <body>
     <header>
         @*Code from https://getbootstrap.com/docs/4.3/components/navs/*@
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: darkgreen;">
-            <a class="navbar-brand" href="#">Brainless Vacations</a>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgb(0, 190, 166);">
+            <a class="navbar-brand" href="#">Brainless Vacay</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
+                    <li id="spacetest"></li>
                     <li class="nav-item active">
                         <a class="nav-link" href="~/Home">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -36,10 +39,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="~/Trip">Take the Survey</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/user">Login</a>
+                    </li>
                 </ul>
             </div>
         </nav>
+
+
     </header>
         @RenderBody()
 </body>
