--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Popular.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Popular.cshtml
@@ -1,15 +1,21 @@
 ﻿@model IEnumerable<BlindVacationFullstack.Models.PopularTrip>
 
+    <link rel="stylesheet" href="~/css/TripListStyling.css" />
+
 @foreach (var item in Model)
 {
-    <h6>@item.CityName</h6>
-    <h6>@item.VacationName</h6>
-    <form asp-action="MyVacations">
-        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).InUSA" />
-        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).LikesHot" />
-        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).Price" />
-        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).HasChildren" />
-        <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).LikesOutdoor" />
-        <button type="submit">View Details</button>
-    </form>
+    <div class="container">
+        <h3>@item.CityName</h3>
+        <h6>@item.VacationName</h6>
+
+
+        <form asp-action="MyVacations">
+            <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).InUSA" />
+            <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).LikesHot" />
+            <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).Price" />
+            <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).HasChildren" />
+            <input type="hidden" asp-for="@Model.First(x => x.AnswerCode == item.AnswerCode).LikesOutdoor" />
+            <button class="view" type="submit"><span>View Details</span></button>
+        </form>
+    </div>
 }
