css done for home page, survey page, and details page

--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
         <p id="p12">Who are we?</p><br />
         <p id="p11">
             Brainless Vacations seeks to help our users to get the best deals on travel packages and advise them on where to go. We work to a budget set out by the user which they set by taking our survey.
-           <br /><br /> We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
+            We also offer advice and opinions on where to go and local tourist attractions, and events. Our application makes it even easier now for our users to enjoy their vacation without the stress of planning it.
 
         </p>
 
@@ -38,20 +38,22 @@
     <div id="test2">
         <img id="home_image7" src="~/assets/imgs/problem.jpg" />
         <p id="p12">What problems do we set out to solve?</p><br />
-        <p id="p11">
-            Make your vacation an enjoyable one. ADD MORE INFO.
+                                                             <p id="p11">
+                                                                 Brainless Vacay's top priority is making the user's vacation an enjoyable one by reducing the stress that preparing for a vacation can cause. Our job is
+                                                                 to make your vacation planning easier, your job is to enjoy your vacation.
+                                                                 
 
-        </p>
-
+                                                             </p>
+        
     </div>
     <div id="test3">
         <img id="home_image5" src="~/assets/imgs/team.jpg" />
         <p id="p12">About the team.</p><br />
-        <p id="p11">
-            CHANGE INFO..............Brainless Vacations seeks to help our uerey set by taking our survey.
-            ation makes itt.
+                                       <p id="p11">
+                                           We are a group of five software developers, who all had the same problem. We all wanted to go on a trip but didn't want the headache that
+                                           came with planning one. So, we all teamed up and created an application that will do it for us.
 
-        </p>
+                                       </p>
 
     </div>
 
