--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Details.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Trip/Details.cshtml
@@ -1,13 +1,18 @@
 ﻿@model BlindVacationFullstack.Models.ViewModels.EditTripViewModel
 
-<h2>@Model.City.Name</h2>
-<p>@Model.City.Description</p>
+<link rel="stylesheet" href="~/css/reset.css" />
+<link rel="stylesheet" href="~/css/tripstyle.css" />
 
-<img src="@Model.City.ImageUrl" />
+<h2 id="cityname">You're going to: @Model.City.Name</h2>
+<div id="imgcontainer">
+    <img id="detailimg" src="@Model.City.ImageUrl" />
+</div>
 
-<h3>@Model.Hotel.Name</h3>
+<p id="detaildescrip">@Model.City.Description</p>
+
+<p id="detailhotel">Based on your response from the survey, we recommend staying at: <p id="ppp">@Model.Hotel.Name</p>
 <img src="@Model.Hotel.ImageUrl" />
-@{ 
+@{
     int count = 2;
 }
 
@@ -15,11 +20,14 @@
 {
     if (count % 2 == 0)
     {
-    <h5>@item</h5>
+        <p class="detailact">Activities we thought you'd be interested in based off your responses in the survey: <br /></p>
+        <h5 class="detailitems">@item</h5>
     }
     else
     {
-        <p>@item</p>
+        <p class="detailact">Activities we thought you'd be interested in based off your responses in the survey: <br /></p>
+
+        <p class="detailitems">@item</p>
     }
 }
 
@@ -31,13 +39,16 @@
     <div>
         <input type="hidden" asp-for="UserID" value="@Model.User.ID" />
     </div>
-    <fieldset>
+    <fieldset id="detailchangenamebutton">
         <label asp-for="VacationName"> Add a name to your vacation:</label>
         <input asp-for="VacationName" value="" />
     </fieldset>
-    <button type="submit">Save Your Vacation!</button>
+    <button id="savebuttondetail" type="submit">Save Your Vacation!</button>
 </form>
 
+<div id="retakebuttondetail">
 <form asp-action="Index">
-    <button type="submit">Retake the Survey</button>
+    <button id="retakebuttondetail" type="submit">Retake the Survey</button>
 </form>
+</div>
+<footer id="detailfooter"><p id="footerp">Brainless Vacay</p></footer>
