--- a/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
+++ b/BlindVacationFullstack/BlindVacationFullstack/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         @*Code from https://getbootstrap.com/docs/4.3/components/navs/*@
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgb(0, 190, 166);">
-            <a class="navbar-brand" href="#">Brainless Vacay</a>
+            <a class="navbar-brand" href="~/Home">Brainless Vacay</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
